--- a/src/styles/vex-theme-default.css
+++ b/src/styles/vex-theme-default.css
@@ -55,8 +55,8 @@
     box-shadow: inset 0 0 0 300px transparent; } }
 
 .vex.vex-theme-default {
-  padding-top: 160px;
-  padding-bottom: 160px; }
+  padding-top: 5rem; /* Eric Jung: changed from 160px to 5 rem */
+  padding-bottom: 5rem; /* Eric Jung: changed from 160px to 5 rem */ }
   .vex.vex-theme-default.vex-closing .vex-content {
     -webkit-animation: vex-flyout .5s forwards;
     animation: vex-flyout .5s forwards; }
@@ -65,15 +65,15 @@
     animation: vex-flyin .5s; }
   .vex.vex-theme-default .vex-content {
     border-radius: 5px;
-    font-family: "Helvetica Neue", sans-serif;
+		font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif; /* Eric Jung: changed from "Helvetica Neue", sans-serif */
     background: white; /* Eric Jung: changed from #f0f0f0 to white */
     /* color: #444; Eric Jung: commented out */
     padding: 1em;
     position: relative;
     margin: 0 auto;
     max-width: 100%;
-    width: 450px;
-    font-size: 1.1em;
+    width: 45rem; /* Eric Jung: changed from 450px */
+    /*font-size: 1.1em; */ /* Eric Jung: removed */
     line-height: 1.5em; }
 
 		/* 2019-07-03 Eric Jung: commented out so that app.css styles take precendence
@@ -104,7 +104,8 @@
       color: #777;
       background: #e0e0e0; }
   .vex.vex-theme-default .vex-dialog-form .vex-dialog-message {
-    margin-bottom: .5em; }
+		margin-bottom: .5em;
+	}
   .vex.vex-theme-default .vex-dialog-form .vex-dialog-input {
     margin-bottom: 1em; }
     .vex.vex-theme-default .vex-dialog-form .vex-dialog-input select, .vex.vex-theme-default .vex-dialog-form .vex-dialog-input textarea, .vex.vex-theme-default .vex-dialog-form .vex-dialog-input input[type="date"], .vex.vex-theme-default .vex-dialog-form .vex-dialog-input input[type="datetime"], .vex.vex-theme-default .vex-dialog-form .vex-dialog-input input[type="datetime-local"], .vex.vex-theme-default .vex-dialog-form .vex-dialog-input input[type="email"], .vex.vex-theme-default .vex-dialog-form .vex-dialog-input input[type="month"], .vex.vex-theme-default .vex-dialog-form .vex-dialog-input input[type="number"], .vex.vex-theme-default .vex-dialog-form .vex-dialog-input input[type="password"], .vex.vex-theme-default .vex-dialog-form .vex-dialog-input input[type="search"], .vex.vex-theme-default .vex-dialog-form .vex-dialog-input input[type="tel"], .vex.vex-theme-default .vex-dialog-form .vex-dialog-input input[type="text"], .vex.vex-theme-default .vex-dialog-form .vex-dialog-input input[type="time"], .vex.vex-theme-default .vex-dialog-form .vex-dialog-input input[type="url"], .vex.vex-theme-default .vex-dialog-form .vex-dialog-input input[type="week"] {
@@ -117,7 +118,7 @@
       font-weight: inherit;
       font-size: inherit;
       min-height: 2.5em;
-      margin: 0 0 .25em; }
+			/*margin: 0 0 .2em; Eric Jung: removed */ }
       .vex.vex-theme-default .vex-dialog-form .vex-dialog-input select:focus, .vex.vex-theme-default .vex-dialog-form .vex-dialog-input textarea:focus, .vex.vex-theme-default .vex-dialog-form .vex-dialog-input input[type="date"]:focus, .vex.vex-theme-default .vex-dialog-form .vex-dialog-input input[type="datetime"]:focus, .vex.vex-theme-default .vex-dialog-form .vex-dialog-input input[type="datetime-local"]:focus, .vex.vex-theme-default .vex-dialog-form .vex-dialog-input input[type="email"]:focus, .vex.vex-theme-default .vex-dialog-form .vex-dialog-input input[type="month"]:focus, .vex.vex-theme-default .vex-dialog-form .vex-dialog-input input[type="number"]:focus, .vex.vex-theme-default .vex-dialog-form .vex-dialog-input input[type="password"]:focus, .vex.vex-theme-default .vex-dialog-form .vex-dialog-input input[type="search"]:focus, .vex.vex-theme-default .vex-dialog-form .vex-dialog-input input[type="tel"]:focus, .vex.vex-theme-default .vex-dialog-form .vex-dialog-input input[type="text"]:focus, .vex.vex-theme-default .vex-dialog-form .vex-dialog-input input[type="time"]:focus, .vex.vex-theme-default .vex-dialog-form .vex-dialog-input input[type="url"]:focus, .vex.vex-theme-default .vex-dialog-form .vex-dialog-input input[type="week"]:focus {
         box-shadow: inset 0 0 0 2px #8dbdf1;
         outline: none; }
