--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -7,6 +7,7 @@ body {
   margin: 0;
   padding: 1em;
 }
+
 * {
   box-sizing: border-box;
 }
@@ -30,7 +31,7 @@ a {
 }
 
 a:hover {
-  color: #e68108;
+  color: #c60;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -439,7 +440,7 @@ input:checked + label > .switch-inactive {
 }
 
 .scroll {
-  max-height: 40vh;
+  max-height: 50vh;
   overflow-y: auto;
   scrollbar-color: #ddd #f5f5f5;
   scrollbar-width: thin;
@@ -482,6 +483,8 @@ input:checked + label > .switch-inactive {
 .fa-star, .fa-eye, .fa-download {
   color: #f7941e;
 }
+
+
 
 
 /* --- vex --- */
