--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -375,17 +375,6 @@ input:checked + label > .switch-inactive {
   clip: rect(0, 0, 0, 0);
 }
 
-.has-tip {
-  border-bottom: dotted 1px #aaa;
-  cursor: help;
-  display: inline-block;
-  font-weight: bold;
-  margin: 0 0.2em !important;
-  padding: 0 0.5em !important;
-  font-size: 1em;
-  color: #08f;
-}
-
 .fp-orange {
   color: #f90;
 }
@@ -564,7 +553,7 @@ input:checked + label > .switch-inactive {
 /* ----- /Popup ----- */
 
 
-/* --- fa --- */
+/* ----- fa ----- */
 i.fa { 
   color: #f90; 
   display: inline-block;
@@ -574,8 +563,62 @@ i.fa:hover {
 
 }
 
-
-
 a i.fa { 
   color: inherit; 
+}
+
+/* ----- tooltip ----- */
+.tooltip {
+  position: relative;
+  border-bottom: dotted 1px #aaa;
+  cursor: help;
+  display: inline-block;
+  font-weight: bold;
+  margin: 0 0.2em !important;
+  padding: 0 0.5em !important;
+  color: #08f;
+}
+
+.tooltip .tooltiptext {
+  visibility: hidden;
+  width: 20em;
+  background-color: #630;
+  color: #fff;
+  text-align: center;
+  border-radius: 10px;
+  padding: 0.3em;
+  position: absolute;
+  z-index: 1;
+  bottom: 125%;
+  left: 50%;
+  margin-left: -2em;
+  opacity: 0;
+  transition: all 0.5s ease-in-out;
+  font-weight: normal;
+  box-shadow: 0px 1px 5px rgba(0,0,0,0.5);
+  font-size: 0.9rem;
+  line-height: normal;
+}
+
+.tooltip .tooltiptext::after {
+  content: '';
+  position: absolute;
+  top: 100%;
+  left: 1em;
+  border-width: 5px;
+  border-style: solid;
+  border-color: #555 transparent transparent transparent;
+}
+
+.tooltip:hover .tooltiptext {
+  visibility: visible;
+  opacity: 1;
+}
+
+.tooltiptext.center {
+  margin-left: -10em;
+}
+
+.tooltiptext.center::after {
+  left: 50%;
 }
